# django-social-auth-rest

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: page.yml  pages.yml  publish.yml
docs/: astro.config.mjs  package-lock.json  package.json
docs/public/: robots.txt
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: 01getting-started.md  01getting-started.mdx  02signals.mdx  03linked-accounts.mdx
docs/src/content/docs/guides/providers/: github.mdx  google.mdx
helper_html/: .env.example  index.html  package.json
helper_html/src/: main.js
helper_html/src/oauth/: github.js  google.js
src/: manage.py
src/django_social_auth_rest/: admin.py  apps.py  conf.py  emails.py  models.py  serializers.py  signals.py  throttle.py  tokens.py  urls.py  utils.py  views.py
src/django_social_auth_rest/migrations/: 0001_initial.py
src/django_social_auth_rest/serializers/: __init__.py  github.py  google.py
src/django_social_auth_rest/urls/: __init__.py  github.py  google.py
src/django_social_auth_rest/views/: __init__.py  github.py  google.py
src/django_social_auth_rest_project/: asgi.py  settings.py  urls.py  wsgi.py
src/user/: models.py
src/user/migrations/: 0001_initial.py
